# progetto

./: CMakeLists.txt  data.txt  main.base.cpp  main.cpp  main.minimal.cpp  main_sflm.cpp  main_sfml.cpp  pandemic.cpp  pandemic.hpp  pandemic.prova1.cpp  pandemic.prova1.hpp  pandemic.test.cpp
